Ensure colour scheme file is read in by vim as sh

--- a/tmux/tmux.d/tmux-colour-scheme.conf
+++ b/tmux/tmux.d/tmux-colour-scheme.conf
@@ -44,3 +44,5 @@ set-window-option -g window-status-current-fg $tm_color_active
 # Set the status bar
 set -g status-left $tm_session_name
 set -g status-right $tm_spotify' '$tm_date' '$tm_host
+
+# vim: ft=sh
