Increase status updating

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -14,6 +14,7 @@ set-option -g history-limit 10000
 
 # Status bar stuff
 set-option -g status-utf8 on
+set-option -g status-interval 1
 
 # Remove the visual clutter
 set -g status-justify centre
