Remove spotify from tmux prompt

--- a/tmux/tmux.d/tmux-colour-scheme.conf
+++ b/tmux/tmux.d/tmux-colour-scheme.conf
@@ -4,7 +4,6 @@ tm_color_active=colour213
 tm_color_inactive=colour241
 tm_color_feature=colour4
 tm_color_background='#222222'
-tm_spotify="#[fg=$tm_color_music]#(osascript ~/dotfiles/applescripts/spotify.scpt)"
 
 tm_session_name="#[fg=$tm_color_feature,bold]$tm_icon #S"
 tm_host="#[fg=$tm_color_feature,bold]#h"
@@ -43,6 +42,6 @@ set-window-option -g window-status-current-fg $tm_color_active
 
 # Set the status bar
 set -g status-left $tm_session_name
-set -g status-right $tm_spotify' '$tm_date' '$tm_host
+set -g status-right $tm_date' '$tm_host
 
 # vim: ft=sh
