Change active tmux colour from purple to yellow

--- a/tmux/tmux.d/tmux-colour-scheme.conf
+++ b/tmux/tmux.d/tmux-colour-scheme.conf
@@ -1,6 +1,6 @@
 # Some settings
 tm_icon="#"
-tm_color_active=colour213
+tm_color_active=yellow
 tm_color_inactive=colour241
 tm_color_feature=colour4
 tm_color_background='#222222'
