--- a/provisioning/roles/macosx/tasks/main.yml
+++ b/provisioning/roles/macosx/tasks/main.yml
@@ -12,6 +12,9 @@
 - name: Install vim with arguments
   homebrew: name=vim state=latest install_options=override-system-vi
 
+- name: Install scamp from source
+  homebrew: name=scamp install_options=build-from-source
+
 - name: Install neovim head
   homebrew: name=neovim state=head
 
