Update tmux theme

--- a/tmux/tmux.d/tmux-colour-scheme.conf
+++ b/tmux/tmux.d/tmux-colour-scheme.conf
@@ -11,6 +11,7 @@ tm_date="#[fg=$tm_color_inactive] %R %d %b"
 
 set-option -g status-bg '#333333'
 set-option -g status-fg $tm_color_active
+set-option -g status-left-length 1024
 
 # Non-active window
 set-window-option -g window-status-bg '#333333'
