--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -13,15 +13,15 @@ set -g pane-base-index 1
 set-option -g history-limit 10000
 
 # Status bar stuff
-set-option -g status-utf8 on
+set-option -g status-utf8 off
 set-option -g status-interval 1
 
 # Remove the visual clutter
 set -g status-justify centre
 set -g status-left ""
 set -g status-right ""
-set-window-option -g window-status-current-format "#W#F"
-set-window-option -g window-status-format "#W#F"
+set-window-option -g window-status-current-format "#W"
+set-window-option -g window-status-format "#W"
 
 # Vi mode
 set-window-option -g mode-keys vi
