--- a/tmux/tmux.d/tmux-colour-scheme.conf
+++ b/tmux/tmux.d/tmux-colour-scheme.conf
@@ -1,9 +1,11 @@
 # Some settings
+__black='#000000'
+__white='#ffffff'
 tm_icon="#"
-tm_color_active=yellow
-tm_color_inactive=colour241
-tm_color_feature=colour4
-tm_color_background='#222222'
+tm_color_active=$__black
+tm_color_inactive=$__black
+tm_color_feature=$__black
+tm_color_background=$__white
 
 tm_session_name="#[fg=$tm_color_feature,bold]$tm_icon #S"
 tm_host="#[fg=$tm_color_feature,bold]#h"
