Use nice blue gray colour for highlights

--- a/tmux/tmux.d/tmux-colour-scheme.conf
+++ b/tmux/tmux.d/tmux-colour-scheme.conf
@@ -1,10 +1,11 @@
 # Some settings
 __black='#000000'
+__grey='#656D9C'
 __white='#ffffff'
 tm_icon="#"
 tm_color_active=$__black
-tm_color_inactive=$__black
-tm_color_feature=$__black
+tm_color_inactive=$__grey
+tm_color_feature=$__grey
 tm_color_background=$__white
 
 tm_session_name="#[fg=$tm_color_feature,bold]$tm_icon #S"
