Switch tmux theme back to dark

--- a/tmux/tmux.d/tmux-colour-scheme.conf
+++ b/tmux/tmux.d/tmux-colour-scheme.conf
@@ -1,12 +1,9 @@
 # Some settings
-__black='#000000'
-__grey='#656D9C'
-__white='#ffffff'
 tm_icon="#"
-tm_color_active=$__black
-tm_color_inactive=$__grey
-tm_color_feature=$__grey
-tm_color_background=$__white
+tm_color_active=yellow
+tm_color_inactive=colour241
+tm_color_feature=colour4
+tm_color_background='#222222'
 
 tm_session_name="#[fg=$tm_color_feature,bold]$tm_icon #S"
 tm_host="#[fg=$tm_color_feature,bold]#h"
