--- a/tmux/tmux.d/colourschemes/solarized-light.conf
+++ b/tmux/tmux.d/colourschemes/solarized-light.conf
@@ -7,12 +7,12 @@ set-option -g status-attr default
 
 # default window title colors
 set-window-option -g window-status-fg brightyellow #base00
-set-window-option -g window-status-bg default
+set-window-option -g window-status-bg white
 #set-window-option -g window-status-attr dim
 
 # active window title colors
 set-window-option -g window-status-current-fg brightred #orange
-set-window-option -g window-status-current-bg default
+set-window-option -g window-status-current-bg white
 #set-window-option -g window-status-current-attr bright
 
 # pane border
