--- a/.gitignore
+++ b/.gitignore
@@ -100,3 +100,4 @@ emacs/emacs.d/ac-comphist.dat
 emacs/emacs.d/el-get/
 vim/vim/autoload/plug.vim.old
 jupyter/jupyter/migrated
+emacs/emacs.d/smex-items
