--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -19,8 +19,8 @@ set-option -g status-interval 1
 set -g status-justify centre
 set -g status-left ""
 set -g status-right ""
-set-window-option -g window-status-current-format "#W"
-set-window-option -g window-status-format "#W"
+set-window-option -g window-status-current-format "|#I:#W|"
+set-window-option -g window-status-format " #I:#W "
 
 # Vi mode
 set-window-option -g mode-keys vi
