--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,5 +1,5 @@
 set -g prefix C-s
-set -g default-terminal "screen-256color"
+set -g default-terminal "xterm"
 set -g bell-action none
 set -g xterm-keys on
 
