Update tpm install path

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -72,7 +72,7 @@ set -g @tpm_plugins '           \
     '
 
 set -g @resurrect-save 'W'
-run-shell '~/.tmux/plugins/tpm/tpm'
+run-shell '~/dotfiles/external/tpm/tpm'
 
 # Tmux continuum
 set -g @continuum-restore 'on'
