Enable mutt-work and mutt-gmail

--- a/.gitignore
+++ b/.gitignore
@@ -103,3 +103,4 @@ vim/vim/autoload/plug.vim.old
 jupyter/jupyter/migrated
 emacs/emacs.d/smex-items
 mutt/mutt.d/account*
+mutt/mutt.d/startup*.mutt
