Add openssh package

--- a/provisioning/roles/macosx/defaults/main.yml
+++ b/provisioning/roles/macosx/defaults/main.yml
@@ -9,31 +9,32 @@ homebrew_taps:
 - universal-ctags/universal-ctags
 
 homebrew_packages:
-- git
-- zsh
-- htop-osx
-- gcc
-- tree
-- graphviz
-- tmux
-- md5sha1sum
-- coreutils
-- the_silver_searcher
-- wget
-- gawk
-- dos2unix
-- ssh-copy-id
-- nmap
-- ffmpeg
-- imagemagick
-- trash
-- par
-- gpg
-- mutt
-- w3m
-- direnv
-- grep
 - ansible
+- coreutils
+- direnv
+- dos2unix
+- ffmpeg
+- gawk
+- gcc
+- git
+- gpg
+- graphviz
+- grep
+- htop-osx
+- imagemagick
+- md5sha1sum
+- mutt
+- nmap
+- openssh
+- par
+- ssh-copy-id
+- the_silver_searcher
+- tmux
+- trash
+- tree
+- w3m
+- wget
+- zsh
 
 # Docker
 - docker
@@ -69,22 +70,22 @@ homebrew_casks:
 - garmin-express
 - gimp
 - gpgtools
+- iterm2
 - keyboard-cleaner
 - limechat
-- puppet
-- saoimage-ds9
-- mendeley-desktop
 - mactex
 - macvim
-- iterm2
+- mendeley-desktop
+- omnidisksweeper
+- osxfuse
+- puppet
+- saoimage-ds9
 - skim
 - skype
-- transmission
 - spectacle
 - steam
+- transmission
 - vagrant
 - virtualbox
-- zoomus
-- omnidisksweeper
 - vlc
-- osxfuse
+- zoomus
