--- a/provisioning/roles/macosx/defaults/main.yml
+++ b/provisioning/roles/macosx/defaults/main.yml
@@ -42,7 +42,7 @@ homebrew_packages:
 - wget
 - zsh
 
-# Docker
+# Docker
 - docker
 - docker-machine
 - docker-compose
@@ -61,8 +61,9 @@ homebrew_packages:
 - elixir
 - leiningen
 - nim
+- haskell-stack
 
-# Javascript
+# Javascript
 - node
 
 # My stuff
