--- a/provisioning/roles/macosx/defaults/main.yml
+++ b/provisioning/roles/macosx/defaults/main.yml
@@ -34,6 +34,7 @@ homebrew_packages:
 - ngircd
 - nmap
 - openssh
+- pandoc
 - par
 - pdsh
 - reattach-to-user-namespace
@@ -45,6 +46,7 @@ homebrew_packages:
 - trash
 - tree
 - w3m
+- watch
 - weechat
 - wget
 - zsh
@@ -108,6 +110,7 @@ homebrew_casks:
 - steam
 - thunderbird
 - transmission
+- usb-overdrive
 - vagrant
 - virtualbox
 - vlc
