--- a/provisioning/roles/macosx/tasks/main.yml
+++ b/provisioning/roles/macosx/tasks/main.yml
@@ -39,6 +39,10 @@
     - packaging
   with_items: homebrew_casks
 
+- name: Install npm packages
+  npm: name={{ item }} global=yes production=yes state=latest
+  with_items: npm_packages
+
 - name: Update some iTerm2 defaults
   command: defaults write com.googlecode.iterm2 {{ item }}
   with_items:
