--- a/provisioning/roles/macosx/tasks/main.yml
+++ b/provisioning/roles/macosx/tasks/main.yml
@@ -2,13 +2,13 @@
   homebrew_tap: tap={{ item }} state=present
   tags:
     - packaging
-  with_items: homebrew_taps
+  with_items: "{{ homebrew_taps }}"
 
 - name: Install homebrew packages
   homebrew: name={{ item }} state=present
   tags:
     - packaging
-  with_items: homebrew_packages
+  with_items: "{{ homebrew_packages }}"
 
 - name: Install cfitsio with examples
   homebrew: name=cfitsio install_options=with-examples
@@ -37,11 +37,15 @@
   homebrew_cask: name={{ item }} state=present
   tags:
     - packaging
-  with_items: homebrew_casks
+  with_items: "{{ homebrew_casks }}"
 
 - name: Install npm packages
   npm: name={{ item }} global=yes production=yes state=latest
-  with_items: npm_packages
+  with_items: "{{ npm_packages }}"
+
+- name: Install pip packages
+  pip: name={{ item }} executable=/usr/local/bin/pip state=latest
+  with_items: "{{ pip_packages }}"
 
 - name: Update some iTerm2 defaults
   command: defaults write com.googlecode.iterm2 {{ item }}
