--- a/provisioning/roles/macosx/tasks/main.yml
+++ b/provisioning/roles/macosx/tasks/main.yml
@@ -10,6 +10,22 @@
     - packaging
   with_items: "{{ homebrew_packages }}"
 
+- name: Link service items
+  file:
+    src: /usr/local/opt/{{ item }}/homebrew.mxcl.{{ item }}.plist
+    path: "{{ home }}/Library/LaunchAgents/homebrew.mxcl.{{ item }}.plist"
+    state: link
+    force: yes
+  tags:
+    - packaging
+  with_items: "{{ homebrew_services }}"
+
+- name: Start services at launch
+  command: launchctl load -w {{ home }}/Library/LaunchAgents/homebrew.mxcl.{{ item }}.plist
+  tags:
+    - packaging
+  with_items: "{{ homebrew_services }}"
+
 - name: Install cfitsio with examples
   homebrew: name=cfitsio install_options=with-examples
   tags:
@@ -22,6 +38,8 @@
 
 - name: Install gnuplot with arguments
   homebrew: name=gnuplot state=latest install_options=with-x11,with-cairo,with-wxmac,with-aquaterm
+  tags:
+    - packaging
 
 - name: Install emacs with arguments
   homebrew: name=emacs state=latest install_options=with-cocoa,with-imagemagick
@@ -41,10 +59,14 @@
 
 - name: Install npm packages
   npm: name={{ item }} global=yes production=yes state=latest
+  tags:
+    - packaging
   with_items: "{{ npm_packages }}"
 
 - name: Install pip packages
   pip: name={{ item }} executable=/usr/local/bin/pip state=latest
+  tags:
+    - packaging
   with_items: "{{ pip_packages }}"
 
 - name: Update some iTerm2 defaults
