--- a/provisioning/roles/macosx/defaults/main.yml
+++ b/provisioning/roles/macosx/defaults/main.yml
@@ -7,6 +7,7 @@ homebrew_taps:
 - homebrew/dupes
 - neovim/neovim
 - universal-ctags/universal-ctags
+- homebrew/services
 
 homebrew_packages:
 - ansible
