--- a/.gitmodules
+++ b/.gitmodules
@@ -25,3 +25,6 @@
 [submodule "external/git-latexdiff"]
 	path = external/git-latexdiff
 	url = https://gitlab.com/git-latexdiff/git-latexdiff.git
+[submodule "external/git-standup"]
+	path = external/git-standup
+	url = https://github.com/kamranahmedse/git-standup
