--- a/provisioning/site.yml
+++ b/provisioning/site.yml
@@ -1,7 +1,7 @@
 ---
 - hosts: localhost
   vars:
-  - home: /Users/{{ ansible_user_id }}
+  - home: "{{ lookup('env', 'HOME') }}"
 
   roles:
   - common
