Only link log dir on osx

--- a/provisioning/roles/common/tasks/main.yml
+++ b/provisioning/roles/common/tasks/main.yml
@@ -10,3 +10,4 @@
 
 - name: Ensure log dir link is created
   file: path={{ home }}/var/log state=link src={{ home }}/Library/Logs/custom
+  when: ansible_distribution == "MacOSX"
