Link ngts python on ngtshead

--- a/provisioning/roles/pyenv/tasks/main.yml
+++ b/provisioning/roles/pyenv/tasks/main.yml
@@ -23,3 +23,10 @@
     - 3.4.4
     - 3.5.1
   ignore_errors: yes
+
+- name: Link custom ngts python version into versions dir
+  file:
+    src: /usr/local/python
+    dest: "{{ pyenv_dir }}/versions/ngts"
+    state: link
+  when: ansible_hostname == "ngtshead"
