--- a/tmux/tmux.d/colourschemes/custom.conf
+++ b/tmux/tmux.d/colourschemes/custom.conf
@@ -1,21 +1,21 @@
-set-option -g status-bg '#f8f8ff'
+set-option -g status-bg '#f6f6f6'
 set-option -g status-fg black
 
 # Non-active window
-set-window-option -g window-status-bg '#f8f8ff'
+set-window-option -g window-status-bg '#f6f6f6'
 set-window-option -g window-status-fg black
 set-window-option -g window-status-attr dim
 
 # Active window
-set-window-option -g window-status-current-bg '#f8f8ff'
+set-window-option -g window-status-current-bg '#f6f6f6'
 set-window-option -g window-status-current-fg black
 
 # Pane borders
-set-option -g pane-border-fg '#f8f8ff'
-set-option -g pane-border-bg '#f8f8ff'
+set-option -g pane-border-fg '#f6f6f6'
+set-option -g pane-border-bg '#f6f6f6'
 set-option -g pane-active-border-fg black
-set-option -g pane-active-border-bg '#f8f8ff'
+set-option -g pane-active-border-bg '#f6f6f6'
 
 # Change status line colours
 set -g message-fg black
-set -g message-bg '#f8f8ff'
+set -g message-bg '#f6f6f6'
