Style tmux selection background

--- a/tmux/tmux.d/colourschemes/custom.conf
+++ b/tmux/tmux.d/colourschemes/custom.conf
@@ -19,3 +19,6 @@ set-option -g pane-active-border-bg '#f6f6f6'
 # Change status line colours
 set -g message-fg black
 set -g message-bg '#f6f6f6'
+
+# Selection style
+set-window-option -g mode-style fg='#f6f6f6',bg='#a9a9a9'
