--- a/plists/net.devpi.plist
+++ b/plists/net.devpi.plist
@@ -2,11 +2,16 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>KeepAlive</key>
+	<dict>
+		<key>SuccessfulExit</key>
+		<true/>
+	</dict>
 	<key>Label</key>
 	<string>net.devpi</string>
 	<key>ProgramArguments</key>
 	<array>
-        <string>/Users/simon/.pyenv/versions/devpi/bin/devpi-server</string>
+		<string>/Users/simon/.pyenv/versions/devpi/bin/devpi-server</string>
 		<string>--port</string>
 		<string>3141</string>
 	</array>
