Swap iterm2 for beta

--- a/provisioning/roles/macosx/defaults/main.yml
+++ b/provisioning/roles/macosx/defaults/main.yml
@@ -108,7 +108,7 @@ homebrew_casks:
 - gimp
 - google-chrome
 - gpgtools
-- iterm2
+- iterm2-beta
 - jadengeller-helium
 - keyboard-cleaner
 - launchcontrol
