--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -8,6 +8,9 @@ set -g renumber-windows on
 set -g base-index 1
 set -g pane-base-index 1
 
+# Enable the mouse, just for kicks
+set mouse on
+
 # Increase the scrollback history
 set-option -g history-limit 10000
 
