--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -18,11 +18,6 @@ set-option -g history-limit 10000
 set-option -g status-interval 1
 
 # Remove the visual clutter
-set -g status-justify centre
-set -g status-left ""
-set -g status-right ""
-set-window-option -g window-status-current-format "|#I:#W|"
-set-window-option -g window-status-format " #I:#W "
 
 # Vi mode
 set-window-option -g mode-keys vi
@@ -61,7 +56,7 @@ set -g visual-activity off
 if-shell "uname | grep -q Darwin" "source-file ~/.tmux.d/tmux-osx.conf"
 
 
-source ~/.tmux.d/colourschemes/ir_black.conf
+source ~/.tmux.d/colourschemes/custom.conf
 
 # tmux plugin manager
 set -g @tpm_plugins '           \
