--- a/tmux/tmux.d/colourschemes/custom.conf
+++ b/tmux/tmux.d/colourschemes/custom.conf
@@ -1,24 +1,9 @@
-set-option -g status-bg '#f6f6f6'
-set-option -g status-fg black
-
-# Non-active window
-set-window-option -g window-status-bg '#f6f6f6'
-set-window-option -g window-status-fg black
-set-window-option -g window-status-attr dim
-
-# Active window
-set-window-option -g window-status-current-bg '#f6f6f6'
-set-window-option -g window-status-current-fg black
-
-# Pane borders
-set-option -g pane-border-fg '#f6f6f6'
-set-option -g pane-border-bg '#f6f6f6'
-set-option -g pane-active-border-fg black
-set-option -g pane-active-border-bg '#f6f6f6'
-
-# Change status line colours
-set -g message-fg black
-set -g message-bg '#f6f6f6'
-
-# Selection style
-set-window-option -g mode-style fg='#f6f6f6',bg='#a9a9a9'
+set -g status-justify left
+set -g status-left ""
+set -g status-right ""
+set -g window-status-current-format "#[fg=blue,bg=colour234]|#I:#W|"
+set -g window-status-format "#[fg=colour254,bg=colour234,bold] #I:#W "
+set -g pane-border-fg white
+set -g pane-active-border-fg blue
+set -g status-fg colour254 # white
+set -g status-bg colour234 # black
