--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -8,8 +8,8 @@ set -g renumber-windows on
 set -g base-index 1
 set -g pane-base-index 1
 
-# Enable the mouse, just for kicks
-set mouse on
+# Disable the mouse
+set mouse off
 
 # Increase the scrollback history
 set-option -g history-limit 10000
