Switch back to grb256

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -56,7 +56,7 @@ set -g visual-activity off
 if-shell "uname | grep -q Darwin" "source-file ~/.tmux.d/tmux-osx.conf"
 
 
-source ~/.tmux.d/colourschemes/custom.conf
+source ~/.tmux.d/colourschemes/ir_black.conf
 
 # tmux plugin manager
 set -g @tpm_plugins '           \
