--- a/provisioning/roles/macosx/defaults/main.yml
+++ b/provisioning/roles/macosx/defaults/main.yml
@@ -7,11 +7,13 @@ homebrew_taps:
 - homebrew/dupes
 - universal-ctags/universal-ctags
 - homebrew/services
+- homebrew/completions
 
 homebrew_packages:
 - ansible
 - bats
 - binutils
+- cargo-completion
 - colordiff
 - coreutils
 - curl
