Switch back to ir_black

--- a/tmux/tmux.d/colourschemes/custom.conf
+++ b/tmux/tmux.d/colourschemes/custom.conf
@@ -1,7 +1,21 @@
-# Basic colour scheme
-source ~/.tmux.d/colourschemes/solarized-light.conf
-
 # Status bar
 set -g status-justify left
+set -g status-left ""
+set -g status-right ""
+set -g status-fg colour254 # white
+set -g status-bg colour234 # black
+
+# Window
+set -g window-status-current-format "#[fg=blue,bg=colour234]#W"
+set -g window-status-format "#[fg=colour254,bg=colour234,bold]#W"
+
+# Borders
+set -g pane-border-fg white
+set -g pane-active-border-fg blue
+
+# messages
+set -g message-fg colour254
+set -g message-bg colour234
+
 
 # vim: ft=sh
