--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -69,6 +69,6 @@ run-shell '~/dotfiles/external/tpm/tpm'
 # Tmux continuum
 set -g @continuum-restore 'on'
 
-source ~/.tmux.d/colourschemes/custom.conf
+source ~/.tmux.d/colourschemes/ir_black.conf
 
 # vim: ft=sh
