Revert "Switch back to ir_black"
This reverts commit adced5b993ec724fda759d9af8d892f794a736d8.

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -69,6 +69,6 @@ run-shell '~/dotfiles/external/tpm/tpm'
 # Tmux continuum
 set -g @continuum-restore 'on'
 
-source ~/.tmux.d/colourschemes/ir_black.conf
+source ~/.tmux.d/colourschemes/custom.conf
 
 # vim: ft=sh
