Perform some unsets for tmux colours

--- a/tmux/tmux.d/colourschemes/custom.conf
+++ b/tmux/tmux.d/colourschemes/custom.conf
@@ -1,7 +1,13 @@
+# Resets
+set -g status-justify left
+set -g window-status-current-format "#W"
+set -g window-status-format "#W"
+set -gu window-status-current-style
+set -gu window-status-style
+set -gu pane-border-style
+set -gu pane-active-border-style
+
 # Basic colour scheme
 source ~/.tmux.d/colourschemes/solarized-light.conf
-
-# Status bar
-set -g status-justify left
 
 # vim: ft=sh
