Use custom shell on ngtshead

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -55,6 +55,9 @@ set -g visual-activity off
 # OSX specific stuff
 if-shell "uname | grep -q Darwin" "source-file ~/.tmux.d/tmux-osx.conf"
 
+# Other hostname specific stuff
+if-shell "test -f ~/.tmux.d/ngtshead.conf" "display \"Sourcing ~/.tmux.d/ngtshead.conf\"; source-file ~/.tmux.d/ngtshead.conf"
+
 
 # tmux plugin manager
 set -g @tpm_plugins '           \
