--- a/tmux/tmux.d/colourschemes/custom.conf
+++ b/tmux/tmux.d/colourschemes/custom.conf
@@ -10,4 +10,9 @@ set -gu pane-active-border-style
 # Basic colour scheme
 source ~/.tmux.d/colourschemes/solarized-light.conf
 
+set -g status-left ''
+set -g status-right ''
+
+
+
 # vim: ft=sh
