Remove sourcing line from tmux file

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -56,7 +56,7 @@ set -g visual-activity off
 if-shell "uname | grep -q Darwin" "source-file ~/.tmux.d/tmux-osx.conf"
 
 # Other hostname specific stuff
-if-shell "hostname | grep -q ngtshead" "display \"Sourcing ~/.tmux.d/ngtshead.conf\"; source-file ~/.tmux.d/ngtshead.conf"
+if-shell "hostname | grep -q ngtshead" "source-file ~/.tmux.d/ngtshead.conf"
 
 
 # tmux plugin manager
