--- a/tmux/tmux.d/colourschemes/custom.conf
+++ b/tmux/tmux.d/colourschemes/custom.conf
@@ -1,18 +1,27 @@
 # Resets
 set -g status-justify left
-set -g window-status-current-format "#W"
-set -g window-status-format "#W"
 set -gu window-status-current-style
 set -gu window-status-style
 set -gu pane-border-style
 set -gu pane-active-border-style
 
 # Basic colour scheme
-source ~/.tmux.d/colourschemes/solarized-light.conf
+source ~/.tmux.d/colourschemes/ir_black.conf
+
+set -g window-status-current-format "#W"
+set -g window-status-format "#W"
 
 set -g status-left ''
 set -g status-right ''
 
+set -g status-bg '#dddddd'
+set -g window-status-bg '#dddddd'
+set -g window-status-current-bg '#dddddd'
+set -g window-status-fg '#777777'
+set -g window-status-current-fg brightred
+
+set -g message-fg '#777777'
+set -g message-bg '#dddddd'
 
 
 # vim: ft=sh
