--- a/tmux/tmux.d/colourschemes/custom.conf
+++ b/tmux/tmux.d/colourschemes/custom.conf
@@ -11,7 +11,7 @@ source ~/.tmux.d/colourschemes/ir_black.conf
 set -g window-status-current-format "#W"
 set -g window-status-format "#W"
 
-set -g status-left ''
-set -g status-right ''
+set -g status-left '#[fg=blue]#h#[default] '
+set -g status-right '#[fg=#aaaaaa]#($HOME/.bin/loadavg)#[fg=blue]'
 
 # vim: ft=sh
