Make tmux pane borders less dramatic

--- a/tmux/tmux.d/colourschemes/ir_black.conf
+++ b/tmux/tmux.d/colourschemes/ir_black.conf
@@ -21,7 +21,7 @@ set -g window-status-format "#[fg=colour254,bg=#333333]#W"
 # Pane borders
 set -g pane-border-fg '#333333'
 set -g pane-border-bg '#333333'
-set -g pane-active-border-fg brightyellow
+set -g pane-active-border-fg black
 set -g pane-active-border-bg '#333333'
 
 # Change status line colours
