--- a/tmux/tmux.d/colourschemes/custom.conf
+++ b/tmux/tmux.d/colourschemes/custom.conf
@@ -12,6 +12,6 @@ set -g window-status-current-format "#W"
 set -g window-status-format "#W"
 
 set -g status-left '#[fg=blue]#h#[default] '
-set -g status-right '#[fg=#aaaaaa]#($HOME/.bin/loadavg)#[fg=blue]'
+set -g status-right ''
 
 # vim: ft=sh
