--- a/tmux/tmux.d/colourschemes/custom.conf
+++ b/tmux/tmux.d/colourschemes/custom.conf
@@ -1,5 +1,5 @@
 # Resets
-set -g status-justify left
+set -g status-justify centre
 set -gu window-status-current-style
 set -gu window-status-style
 set -gu pane-border-style
