--- a/tmux/tmux.d/colourschemes/custom.conf
+++ b/tmux/tmux.d/colourschemes/custom.conf
@@ -1,5 +1,6 @@
 # Resets
-set -g status-justify centre
+set -g status-position bottom
+set -g status-justify left
 set -gu window-status-current-style
 set -gu window-status-style
 set -gu pane-border-style
@@ -11,7 +12,8 @@ source ~/.tmux.d/colourschemes/material.conf
 set -g window-status-current-format "#W"
 set -g window-status-format "#W"
 
-set -g status-left '#[fg=colour246]#S#[default]'
-set -g status-right '#[fg=colour246]#h#[default]'
+set -g status-right-length 100
+set -g status-left ''
+set -g status-right '#[fg=colour246]#S.#h#[default]'
 
 # vim: ft=sh
