Switch back to ir_black
Revert "Switch to solarized light"

This reverts commit b10525d5a3ee65068b4f6bdb9d542a6f7972c666.

--- a/tmux/tmux.d/colourschemes/custom.conf
+++ b/tmux/tmux.d/colourschemes/custom.conf
@@ -9,8 +9,8 @@ set -gu pane-active-border-style
 # Basic colour scheme
 source ~/.tmux.d/colourschemes/material.conf
 
-set -g window-status-current-format "#I #W"
-set -g window-status-format "#I"
+set -g window-status-current-format "#W"
+set -g window-status-format "#W"
 
 set -g status-right-length 100
 set -g status-left ''
