--- a/tmux/tmux.d/colourschemes/material.conf
+++ b/tmux/tmux.d/colourschemes/material.conf
@@ -23,6 +23,6 @@ set -g pane-active-border-fg black
 set -g pane-active-border-bg default
 
 # Change status line colours
-set -g message-fg black
+set -g message-fg white
 set -g message-bg default
 set -g message-attr bright
