--- a/tmux/tmux.d/colourschemes/material.conf
+++ b/tmux/tmux.d/colourschemes/material.conf
@@ -6,11 +6,11 @@ set -g status-fg yellow
 
 # Non-active window
 set -g window-status-bg default
-set -g window-status-fg white
+set -g window-status-fg colour246
 
 # Active window
 set -g window-status-current-bg default
-set -g window-status-current-fg yellow
+set -g window-status-current-fg colour246
 
 # Window
 set -g window-status-current-format "#W"
@@ -23,6 +23,6 @@ set -g pane-active-border-fg black
 set -g pane-active-border-bg default
 
 # Change status line colours
-set -g message-fg white
+set -g message-fg colour246
 set -g message-bg default
 set -g message-attr bright
