--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -33,6 +33,7 @@ bind-key -r J resize-pane -D 5
 bind-key -r H resize-pane -L 5
 bind-key -r L resize-pane -R 5
 bind-key C-s last-window
+bind-key c new-window -n ''
 
 # Disable suspend
 unbind C-z
