--- a/tmux/tmux.d/colourschemes/custom.conf
+++ b/tmux/tmux.d/colourschemes/custom.conf
@@ -9,11 +9,11 @@ set -gu pane-active-border-style
 # Basic colour scheme
 source ~/.tmux.d/colourschemes/material.conf
 
-set -g window-status-current-format "#I"
-set -g window-status-format "#I"
+set -g window-status-current-format "[#{window_index}#{?window_name, #W,}]"
+set -g window-status-format "#{window_index}#{?window_name, #W,}"
 
 set -g status-right-length 100
 set -g status-left ''
-set -g status-right '#[fg=colour246]#S.#h#[default]'
+set -g status-right '#[fg=colour246]#{session_name}.#{host_short}#[default]'
 
 # vim: ft=sh
