Remove window titles from tmux config

--- a/tmux/tmux.d/colourschemes/custom.conf
+++ b/tmux/tmux.d/colourschemes/custom.conf
@@ -9,8 +9,8 @@ set -gu pane-active-border-style
 # Basic colour scheme
 source ~/.tmux.d/colourschemes/material.conf
 
-set -g window-status-current-format "[#{window_index}#{?window_name, #W,}]"
-set -g window-status-format "#{window_index}#{?window_name, #W,}"
+set -g window-status-current-format "[#{window_index}]"
+set -g window-status-format "#{window_index}"
 
 set -g status-right-length 100
 set -g status-left ''
