--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -9,7 +9,7 @@ set -g base-index 1
 set -g pane-base-index 1
 
 # Disable the mouse
-set mouse on
+set-option -g mouse on
 
 # Increase the scrollback history
 set-option -g history-limit 10000
