Add nice blue border to active window in tmux

--- a/tmux/tmux.d/colourschemes/material.conf
+++ b/tmux/tmux.d/colourschemes/material.conf
@@ -12,14 +12,10 @@ set -g window-status-fg colour246
 set -g window-status-current-bg default
 set -g window-status-current-fg colour246
 
-# Window
-set -g window-status-current-format "#W"
-set -g window-status-format "#W"
-
 # Pane borders
-set -g pane-border-fg default
+set -g pane-border-fg colour238
 set -g pane-border-bg default
-set -g pane-active-border-fg black
+set -g pane-active-border-fg colour60
 set -g pane-active-border-bg default
 
 # Change status line colours
