--- a/tmux/tmux.d/colourschemes/custom.conf
+++ b/tmux/tmux.d/colourschemes/custom.conf
@@ -9,7 +9,7 @@ set -gu pane-active-border-style
 # Basic colour scheme
 source ~/.tmux.d/colourschemes/material.conf
 
-set -g window-status-current-format "[#{window_index}]"
+set -g window-status-current-format "[#[fg=colour60]#{window_index}#[default]]"
 set -g window-status-format "#{window_index}"
 
 set -g status-right-length 100
