--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -9,8 +9,8 @@ set -g renumber-windows on
 set -g base-index 1
 set -g pane-base-index 1
 
-# Disable the mouse
-set-option -g mouse off
+# Enable the mouse
+set-option -g mouse on
 
 # Increase the scrollback history
 set-option -g history-limit 10000
