--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -16,24 +16,24 @@ draw_bold_text_with_bright_colors: true
 font:
   # The normal (roman) font face to use.
   normal:
-    family: "Inconsolata" # should be "Menlo" or something on macOS.
+    family: "Source Code Pro" # should be "Menlo" or something on macOS.
     # Style can be specified to pick a specific face.
     # style: Regular
 
   # The bold font face
   bold:
-    family: "Inconsolata" # should be "Menlo" or something on macOS.
+    family: "Source Code Pro" # should be "Menlo" or something on macOS.
     # Style can be specified to pick a specific face.
     # style: Bold
 
   # The italic font face
   italic:
-    family: "Inconsolata" # should be "Menlo" or something on macOS.
+    family: "Source Code Pro" # should be "Menlo" or something on macOS.
     # Style can be specified to pick a specific face.
     # style: Italic
 
   # Point size of the font
-  size: 16.0
+  size: 12.0
   # Offset is the extra space around each character. offset.y can be thought of
   # as modifying the linespacing, and offset.x as modifying the letter spacing.
   offset:
