Update tmux conf

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -21,6 +21,9 @@ set-option -g status-interval 5
 # Vi mode
 set-window-option -g mode-keys vi
 
+# No automatic window renaming
+set-window-option -g automatic-rename off
+
 # Key bindings
 unbind %
 bind | split-window -h
