--- a/tmux/tmux.d/colourschemes/custom.conf
+++ b/tmux/tmux.d/colourschemes/custom.conf
@@ -9,11 +9,11 @@ set -gu pane-active-border-style
 # Basic colour scheme
 source ~/.tmux.d/colourschemes/material.conf
 
-set -g window-status-current-format "[#[fg=colour60]#{window_index}#[default]]"
-set -g window-status-format "#{window_index}"
+set -g window-status-current-format "[#[fg=colour60]#I:#W#F#[default]]"
+set -g window-status-format "#I:#W#F"
 
 set -g status-right-length 100
 set -g status-left ''
-set -g status-right '#[fg=colour246]#{session_name}.#{host_short}#[default]'
+set -g status-right '#[fg=colour246]#{session_name}.#{host_short} [#(uptime | cut -d: -f 4- | /usr/bin/sed -E "s/^ +//g")]#[default]'
 
 # vim: ft=sh
