--- a/tmux/tmux.d/colourschemes/custom.conf
+++ b/tmux/tmux.d/colourschemes/custom.conf
@@ -1,6 +1,6 @@
 # Resets
 set -g status-position bottom
-set -g status-justify left
+set -g status-justify centre
 set -gu window-status-current-style
 set -gu window-status-style
 set -gu pane-border-style
@@ -13,7 +13,8 @@ set -g window-status-current-format "[#[fg=colour60]#I:#W#F#[default]]"
 set -g window-status-format "#I:#W#F"
 
 set -g status-right-length 100
-set -g status-left ''
-set -g status-right '#[fg=colour246]#{session_name}.#{host_short} [#(uptime | cut -d: -f 4- | /usr/bin/sed -E "s/^ +//g")]#[default]'
+set -g status-left-length 100
+set -g status-left '#[fg=colour246][#{session_name}.#{host_short}]#[default]'
+set -g status-right '#[fg=colour246][#(date)|#(uptime | cut -d: -f 3 | sed -E "s/^ +//")]#[default]'
 
 # vim: ft=sh
