--- a/tmux/tmux.d/colourschemes/custom.conf
+++ b/tmux/tmux.d/colourschemes/custom.conf
@@ -15,6 +15,6 @@ set -g window-status-format "#I:#W#F"
 set -g status-right-length 100
 set -g status-left-length 100
 set -g status-left '#[fg=colour246][#{session_name}.#{host_short}]#[default]'
-set -g status-right '#[fg=colour246][#(date)|#(uptime | cut -d: -f 3 | sed -E "s/^ +//")]#[default]'
+set -g status-right '#[fg=colour246][#(date)|#(uptime | grep -Eo "([0-9].[0-9]+,? *){3}" | sed "s/,//g")]#[default]'
 
 # vim: ft=sh
