Clean up tmux config

--- a/tmux/tmux.d/colourschemes/custom.conf
+++ b/tmux/tmux.d/colourschemes/custom.conf
@@ -1,6 +1,6 @@
 # Resets
 set -g status-position bottom
-set -g status-justify centre
+set -g status-justify left
 set -gu window-status-current-style
 set -gu window-status-style
 set -gu pane-border-style
@@ -14,7 +14,7 @@ set -g window-status-format "#I:#W#F"
 
 set -g status-right-length 100
 set -g status-left-length 100
-set -g status-left '#[fg=colour246][#{session_name}.#{host_short}]#[default]'
-set -g status-right '#[fg=colour246][#(date)|#(uptime | grep -Eo "([0-9].[0-9]+,? *){3}" | sed "s/,//g")]#[default]'
+set -g status-left ''
+set -g status-right '#[fg=colour246]#{session_name}.#{host_short}#[default]'
 
 # vim: ft=sh
