--- a/tmux/tmux.d/tmux-osx.conf
+++ b/tmux/tmux.d/tmux-osx.conf
@@ -1,4 +1,4 @@
 # Update default binding of 'Enter' to use copy-pipe
-unbind -t vi-copy Enter
-bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
+unbind -Tcopy-mode-vi Enter
+bind-key -Tcopy-mode-vi Enter send -X copy-pipe "reattach-to-user-namespace pbcopy"
 set -g default-command "reattach-to-user-namespace -l zsh"
