--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -6,6 +6,14 @@ dpi:
   x: 220.0
   y: 220.0
 
+# Adds this many blank pixels of padding around the window
+# Units are physical pixels; this is not DPI aware.
+# (change requires restart)
+padding:
+  x: 2
+  y: 2
+
+
 # Display tabs using this many cells (changes require restart)
 tabspaces: 4
 
