--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -13,6 +13,13 @@ padding:
   x: 2
   y: 2
 
+# Disable visual bell
+visual_bell:
+  duration: 0
+
+dimensions:
+  columns: 80
+  lines: 24
 
 # Display tabs using this many cells (changes require restart)
 tabspaces: 4
@@ -47,6 +54,8 @@ font:
   offset:
     x: 0.0
     y: 0.0
+
+  use_thin_strokes: true
 
 # Should display the render timer
 render_timer: false
