--- a/i3/i3/config
+++ b/i3/i3/config
@@ -24,8 +24,8 @@ new_window 1pixel
 floating_modifier $mod
 
 # start a terminal
-# bindsym $mod+Return exec i3-sensible-terminal
-bindsym $mod+Return exec urxvt
+bindsym $mod+Return exec i3-sensible-terminal
+# bindsym $mod+Return exec urxvt
 
 # start chrome
 bindsym $mod+c exec chromium
