--- a/i3/i3/config
+++ b/i3/i3/config
@@ -24,7 +24,7 @@ new_window pixel 1
 floating_modifier $mod
 
 # start a terminal
-bindsym $mod+Return exec i3-sensible-terminal
+bindsym $mod+Return exec stterm
 # bindsym $mod+Return exec urxvt
 
 # start chrome
