Configure kitty properly

--- a/kitty/kitty/kitty.conf
+++ b/kitty/kitty/kitty.conf
@@ -39,10 +39,13 @@ adjust_column_width 0
 box_drawing_scale 0.001, 1, 1.5, 2
 
 # The foreground color
-foreground       #657b83
-
+# solarized light
+# foreground       #657b83
 # The background color
-background       #fdf6e3
+# background       #fdf6e3
+# default
+foreground #ffffff
+background #232323
 
 # The opacity of the background. A number between 0 and 1, where 1 is opaque and 0 is fully transparent.
 # This will only work if supported by the OS (for instance, when using a compositor under X11). Note
@@ -205,70 +208,70 @@ inactive_tab_font_style normal
 
 # Defaults
 # black
-# color0   #000000
-# color8   #4d4d4d
+color0   #000000
+color8   #4d4d4d
 
 # red
-# color1   #cc0403
-# color9   #f2201f
+color1   #cc0403
+color9   #f2201f
 
 # green
-# color2   #19cb00
-# color10  #23fd00
+color2   #19cb00
+color10  #23fd00
 
 # yellow
-# color3   #cecb00
-# color11  #fffd00
+color3   #cecb00
+color11  #fffd00
 
 # blue
-# color4  #0d73cc
-# color12 #1a8fff
+color4  #0d73cc
+color12 #1a8fff
 
 # magenta
-# color5   #cb1ed1
-# color13  #fd28ff
+color5   #cb1ed1
+color13  #fd28ff
 
 # cyan
-# color6   #0dcdcd
-# color14  #14ffff
+color6   #0dcdcd
+color14  #14ffff
 
 # white
-# color7   #dddddd
-# color15  #ffffff
+color7   #dddddd
+color15  #ffffff
 
 # Solarized light
 
 # black
-color0   #003541
-color8   #002833
+# color0   #003541
+# color8   #002833
 
 # red
-color1   #dc322f
-color9   #cb4b16
+# color1   #dc322f
+# color9   #cb4b16
 
 # green
-color2   #859901
-color10  #586e75
+# color2   #859901
+# color10  #586e75
 
 # yellow
-color3   #b58901
-color11  #657b83
+# color3   #b58901
+# color11  #657b83
 
 # blue
-color4  #268bd2
-color12 #839496
+# color4  #268bd2
+# color12 #839496
 
 # magenta
-color5   #d33682
-color13  #6c6ec6
+# color5   #d33682
+# color13  #6c6ec6
 
 # cyan
-color6   #2aa198
-color14  #93a1a1
+# color6   #2aa198
+# color14  #93a1a1
 
 # white
-color7   #eee8d5
-color15  #fdf6e3
+# color7   #eee8d5
+# color15  #fdf6e3
 
 
 # Key mapping
