--- a/kitty/kitty/kitty.conf
+++ b/kitty/kitty/kitty.conf
@@ -11,7 +11,7 @@
 #
 # You can get a list of full family names available on your computer by running
 # kitty list-fonts
-font_family      Source Code Pro Regular
+font_family      Noto Mono Regular # Source Code Pro Regular
 italic_font      auto
 bold_font        auto
 bold_italic_font auto
