--- a/i3/i3/config
+++ b/i3/i3/config
@@ -9,7 +9,7 @@
 #
 # Please see http://i3wm.org/docs/userguide.html for a complete reference!
 
-set $mod Mod1
+set $mod Mod4
 
 # Add caps lock as a control key
 exec_always xmodmap ~/.xmodmap
@@ -28,7 +28,7 @@ bindsym $mod+Return exec stterm
 # bindsym $mod+Return exec urxvt
 
 # start chrome
-bindsym $mod+c exec chromium
+bindsym $mod+c exec firefox
 
 # kill focused window
 bindsym $mod+Shift+Q kill
@@ -146,5 +146,6 @@ bindsym $mod+r mode "resize"
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 bar {
+  position top
   status_command i3status
 }
