--- a/i3/i3status.conf
+++ b/i3/i3status.conf
@@ -1,15 +1,17 @@
 general {
         output_format = i3bar
         colors = true
-        interval = 5
+        interval = 10
+        separator = "|"
 }
 
-order += "disk /"
-order += "ethernet eth0"
-order += "cpu_temperature 0"
+order += "time"
+# order += "disk /"
+order += "ethernet wlp4s0"
+# order += "cpu_temperature 0"
 order += "load"
 
-ethernet eth0 {
+ethernet wlp4s0 {
         # if you use %speed, i3status requires the cap_net_admin capability
         format_up = "E: %ip (%speed)"
         format_down = "E: down"
