--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -3,23 +3,24 @@
 # The FreeType rasterizer needs to know the device DPI for best results
 # (changes require restart)
 dpi:
-  x: 220.0
-  y: 220.0
-
-# Adds this many blank pixels of padding around the window
-# Units are physical pixels; this is not DPI aware.
-# (change requires restart)
-padding:
-  x: 2
-  y: 2
+  x: 120.0
+  y: 120.0
 
 # Disable visual bell
 visual_bell:
   duration: 0
 
-dimensions:
-  columns: 80
-  lines: 24
+window:
+  dimensions:
+    columns: 80
+    lines: 24
+  # Adds this many blank pixels of padding around the window
+  # Units are physical pixels; this is not DPI aware.
+  # (change requires restart)
+  padding:
+    x: 2
+    y: 2
+
 
 # Display tabs using this many cells (changes require restart)
 tabspaces: 4
@@ -31,19 +32,19 @@ draw_bold_text_with_bright_colors: true
 font:
   # The normal (roman) font face to use.
   normal:
-    family: "Menlo" # should be "Menlo" or something on macOS.
+    family: "Ubuntu Mono" # should be "Menlo" or something on macOS.
     # Style can be specified to pick a specific face.
     # style: Regular
 
   # The bold font face
   bold:
-    family: "Menlo" # should be "Menlo" or something on macOS.
+    family: "Ubuntu Mono" # should be "Menlo" or something on macOS.
     # Style can be specified to pick a specific face.
     # style: Bold
 
   # The italic font face
   italic:
-    family: "Menlo" # should be "Menlo" or something on macOS.
+    family: "Ubuntu Mono" # should be "Menlo" or something on macOS.
     # Style can be specified to pick a specific face.
     # style: Italic
 
@@ -52,8 +53,8 @@ font:
   # Offset is the extra space around each character. offset.y can be thought of
   # as modifying the linespacing, and offset.x as modifying the letter spacing.
   offset:
-    x: 0.0
-    y: 0.0
+    x: 0
+    y: 0
 
   use_thin_strokes: true
 
