--- a/i3/i3/config
+++ b/i3/i3/config
@@ -28,7 +28,7 @@ bindsym $mod+Return exec stterm
 # bindsym $mod+Return exec urxvt
 
 # start chrome
-bindsym $mod+c exec firefox
+bindsym $mod+c exec chromium-browser
 
 # kill focused window
 bindsym $mod+Shift+Q kill
