--- a/i3/i3status.conf
+++ b/i3/i3status.conf
@@ -13,7 +13,7 @@ order += "load"
 
 ethernet wlp4s0 {
         # if you use %speed, i3status requires the cap_net_admin capability
-        format_up = "E: %ip (%speed)"
+        format_up = "E: %ip"
         format_down = "E: down"
 }
 
