--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -61,6 +61,13 @@ if-shell "uname | grep -q Darwin" "source-file ~/.tmux.d/tmux-osx.conf"
 # Other hostname specific stuff
 if-shell "hostname | grep -q ngtshead" "source-file ~/.tmux.d/ngtshead.conf"
 
+# smart pane switching with awareness of vim splits
+bind -n C-h run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys C-h) || tmux select-pane -L"
+bind -n C-j run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys C-j) || tmux select-pane -D"
+bind -n C-k run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys C-k) || tmux select-pane -U"
+bind -n C-l run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys C-l) || tmux select-pane -R"
+bind -n C-\ run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys 'C-\\') || tmux select-pane -l"
+
 
 # tmux plugin manager
 set -g @tpm_plugins '           \
