--- a/i3/i3/config
+++ b/i3/i3/config
@@ -151,3 +151,6 @@ bar {
   position top
   status_command i3status
 }
+
+# Automatically switch between workspaces
+workspace_auto_back_and_forth yes
