--- a/i3/i3/config
+++ b/i3/i3/config
@@ -97,6 +97,7 @@ bindsym $mod+7 workspace number 7
 bindsym $mod+8 workspace number 8
 bindsym $mod+9 workspace number 9
 bindsym $mod+0 workspace number 10
+bindsym $mod+Tab workspace back_and_forth
 
 # move focused container to workspace
 bindsym $mod+Shift+exclam move container to workspace 1
@@ -151,6 +152,3 @@ bar {
   position top
   status_command i3status
 }
-
-# Automatically switch between workspaces
-workspace_auto_back_and_forth yes
