--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -21,6 +21,8 @@ window:
     x: 2
     y: 2
 
+  decorations: true
+
 
 # Display tabs using this many cells (changes require restart)
 tabspaces: 4
