move tmux listign to the left

--- a/tmux/tmux.d/colourschemes/custom.conf
+++ b/tmux/tmux.d/colourschemes/custom.conf
@@ -1,6 +1,6 @@
 # Resets
 set -g status-position top
-set -g status-justify centre
+set -g status-justify left
 set -gu window-status-current-style
 set -gu window-status-style
 set -gu pane-border-style
