Customise tmux colour scheme further

--- a/tmux/tmux.d/colourschemes/custom.conf
+++ b/tmux/tmux.d/colourschemes/custom.conf
@@ -9,12 +9,12 @@ set -gu pane-active-border-style
 # Basic colour scheme
 source ~/.tmux.d/colourschemes/ir_black.conf
 
-set -g window-status-current-format "[#[fg=colour60]#I:#W#F#[default]]"
+set -g window-status-current-format "#[fg=yellow][#[fg=blue]#I:#W#F#[fg=yellow]]"
 set -g window-status-format "#I:#W#F"
 
 set -g status-right-length 100
 set -g status-left-length 100
 set -g status-left ''
-set -g status-right '#[fg=colour246]#{session_name}.#{host_short}#[default]'
+set -g status-right '#[fg=white]#{session_name}.#{host_short}#[default]'
 
 # vim: ft=sh
