--- a/tmux/tmux.d/colourschemes/ir_black.conf
+++ b/tmux/tmux.d/colourschemes/ir_black.conf
@@ -2,28 +2,30 @@ set -g status-left ""
 set -g status-right ""
 
 set -g status-bg '#333333'
-set -g status-fg yellow
+set -g status-fg '#9b9155'
 
 # Non-active window
 set -g window-status-bg '#333333'
 set -g window-status-fg white
-set -g window-status-attr dim
+set -g window-status-attr bright
 
 # Active window
 set -g window-status-current-bg '#333333'
-set -g window-status-current-fg yellow
+set -g window-status-current-fg white
 
 # Window
-set -g window-status-current-format "#[fg=yellow,bg=#333333]#W"
-set -g window-status-format "#[fg=colour254,bg=#333333]#W"
+set -g window-status-current-format "#[fg=#9b9155,bg=#333333]#W"
+set -g window-status-format "#[fg=yellow,bg=#333333]#W"
 
 # Pane borders
-set -g pane-border-fg '#333333'
-set -g pane-border-bg '#333333'
+set -g pane-border-fg '#222222'
+set -g pane-border-bg '#111111'
 set -g pane-active-border-fg '#9b9155'
-set -g pane-active-border-bg '#333333'
+set -g pane-active-border-bg '#111111'
 
 # Change status line colours
 set -g message-fg white
 set -g message-bg '#333333'
 set -g message-attr bright
+
+# vim: ft=sh
