Move tmux status bar to top
This matches the i3 menu and keeps the window numbers in the same place

--- a/tmux/tmux.d/colourschemes/custom.conf
+++ b/tmux/tmux.d/colourschemes/custom.conf
@@ -1,5 +1,5 @@
 # Resets
-set -g status-position bottom
+set -g status-position top
 set -g status-justify left
 set -gu window-status-current-style
 set -gu window-status-style
